[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twiapi"
version = "1.0.0"
description = "Unofficial Twitter/X data API client — search tweets, get followers, trends, user profiles."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "TwiAPI"},
]
keywords = ["twitter", "twitter-api", "x-api", "twitter-scraper", "twitter-data", "social-media", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://twiapi.net"
Documentation = "https://twiapi.net/docs"
Repository = "https://github.com/twiapi/twi-api-sdk"
